<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    tools:context=".view.search.SearchFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="0dp"
        app:icon="@drawable/arrow_back"
        app:iconTint="@color/colorOnBackground"
        app:iconSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_box"
        app:layout_constraintTop_toTopOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="@id/search_box"
        style="@style/Widget.Material3.Button.IconButton"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingEnd="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Theme.GifViewer.SearchBox"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/clear"
        app:iconTint="@color/colorOnSurface"
        app:layout_constraintEnd_toEndOf="@id/search_box"
        app:layout_constraintTop_toTopOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="@id/search_box"
        style="@style/Widget.Material3.Button.IconButton"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textAlignment="center"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@tools:sample/lorem"
                style="@style/TextAppearance.Material3.BodyLarge"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.Material3.CircularProgressIndicator"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/items_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="description,list"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="2dp"
                android:text="@string/searched_results"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="24dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/search_gif_item"
                tools:itemCount="15"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>